--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,28 +33,6 @@
         {% endif %}
         -->
         
-        <!-- <h3><span style="color:#267CB9"> Awards/Certifications </span></h1> 
-        <ul>
-            <li>CompTIA A+ ce Certification
-                <ul>
-                    <li>Code: <a href="http://verify.CompTIA.org">SYB56S9N9GE41FWB</a></li>
-                </ul>
-            </li>
-            <li>Eagle Scout Award</li>      
-            <li>IC3 Certification - 2007      
-                <ul>
-                    <li>Credential ID: <a href="http://verify.certiport.com/">N7mm-woXh</a></li>
-                </ul>
-            </li>
-            <li>Microsoft Office Specialist: Microsoft Office Word 2007 (MOS)     
-                <ul>
-                    <li>Credential ID: <a href="http://verify.certiport.com/">A8PC-wQFv</a></li>
-                </ul>
-            </li>
-        </ul> -->
-        
-        <!-- <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="cd1eaaa3-9fb5-4e3e-a950-1a10813f3333" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script> -->
-
         <!-- {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
@@ -70,7 +48,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="https://tylerwynkoop.com/">Tyler Wynkoop</a></p>
+        <p>This project is maintained by <a href="https://husamryad.com">Husam</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
